--- a/index.html
+++ b/index.html
@@ -252,17 +252,64 @@
                 </div>
             </section>
             <div class="row">
-                <section id="design" class="mb90">
+                <section id="design">
                     <h2 class="title_bold">Design</h2>
                     <div class="design_box clearfix">
-                        <div class="img1"><img src="img/xbanner_mockup_safe.jpg" alt="x배너1"></div>
-                        <div class="img2"><img src="img/xbanner_mockup_infor.jpg" alt="x배너2"></div>
-                        <div class="img3"><img src="img/iceCream_mockup.jpg" alt="아이스크림 목업"></div>
-                        <div class="img4"><img src="img/sushi_mockup.jpg" alt="초밥 목업"></div>
-                        <div class="img5"><img src="img/fan_banner.png" alt="선풍기 배너"></div>
-                        <div class="img6"><img src="img/nut_banner_thumbnail.jpg" alt="nut 배너"></div>
-                        <div class="img7"><img src="img/info_banner.jpg" alt="배송 일정 안내"></div>
-                        <div class="img8"><img src="img/detail_page_thumbnail.jpg" alt="상세 페이지"></div>
+                        <div class="img1">
+                            <a href="#">
+                                <img src="img/xbanner_mockup_safe.jpg" alt="x배너1">
+                                <div class="icon">
+                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="img2">
+                            <a href="#">
+                                <img src="img/xbanner_mockup_infor.jpg" alt="x배너2">
+                                <div class="icon">
+                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="img3">
+                            <a href="#">
+                                <img src="img/iceCream_mockup.jpg" alt="아이스크림 목업">
+                                <div class="icon">
+                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="img4">
+                            <a href="#">
+                                <img src="img/sushi_mockup.jpg" alt="초밥 목업">
+                                <div class="icon">
+                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="img5">
+                            <a href="#">
+                                <img src="img/fan_banner.png" alt="선풍기 배너">
+                                <div class="icon">
+                                    <img src="img/photoshop_color.png" alt="포토샵 아이콘">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="img6">
+                            <a href="#">
+                                <img src="img/nut_banner_thumbnail.jpg" alt="nut 배너">
+                            </a>
+                        </div>
+                        <div class="img7">
+                            <a href="#">
+                                <img src="img/info_banner.jpg" alt="배송 일정 안내">
+                            </a>
+                        </div>
+                        <div class="img8">
+                            <a href="#">
+                                <img src="img/detail_page_thumbnail.jpg" alt="상세 페이지">
+                            </a>
+                        </div>
                     </div>
                 </section>
             </div>
