--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                     <h3>커피니 리뉴얼 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
-                                    <a class="site" href="https://ksysky.github.io/portfolio/coffeenie/index.html">사이트
+                                    <a class="site" href="https://ksysky.github.io/portfolio/coffeenie/index.html" target="_blank">사이트
                                         보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
@@ -190,7 +190,7 @@
                                     <h3>에스쁘아 모작 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
-                                    <a class="site" href="https://ksysky.github.io/portfolio/espoir/index.html">사이트 보러가기
+                                    <a class="site" href="https://ksysky.github.io/portfolio/espoir/index.html" target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
                                             <path id="path_4" data-name="path 4" class="blue"
@@ -221,7 +221,7 @@
                                     <h3>앤드백 리뉴얼 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
-                                    <a class="site" href="https://ksysky.github.io/portfolio/andbag/index.html">사이트 보러가기
+                                    <a class="site" href="https://ksysky.github.io/portfolio/andbag/index.html" target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
                                             <path id="path_4" data-name="path 4" class="blue"
@@ -255,7 +255,7 @@
                 <section id="design">
                     <h2 class="title_bold">Design</h2>
                     <div class="design_box clearfix">
-                        <div class="img1">
+                        <div class="img1 item">
                             <a href="#">
                                 <img src="img/xbanner_mockup_safe.jpg" alt="x배너1">
                                 <div class="icon">
@@ -263,7 +263,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="img2">
+                        <div class="img2 item">
                             <a href="#">
                                 <img src="img/xbanner_mockup_infor.jpg" alt="x배너2">
                                 <div class="icon">
@@ -271,23 +271,23 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="img3">
+                        <div class="img3 item">
                             <a href="#">
-                                <img src="img/iceCream_mockup.jpg" alt="아이스크림 목업">
+                                <img class="pin" src="img/iceCream_mockup.jpg" alt="아이스크림 목업">
                                 <div class="icon">
                                     <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
                                 </div>
                             </a>
                         </div>
-                        <div class="img4">
+                        <div class="img4 item">
                             <a href="#">
-                                <img src="img/sushi_mockup.jpg" alt="초밥 목업">
+                                <img class="pin" src="img/sushi_mockup.jpg" alt="초밥 목업">
                                 <div class="icon">
                                     <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
                                 </div>
                             </a>
                         </div>
-                        <div class="img5">
+                        <div class="img5 item">
                             <a href="#">
                                 <img src="img/fan_banner.png" alt="선풍기 배너">
                                 <div class="icon">
@@ -295,22 +295,30 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="img6">
+                        <div class="img6 item">
                             <a href="#">
                                 <img src="img/nut_banner_thumbnail.jpg" alt="nut 배너">
+                                <div class="icon2">
+                                    <img src="img/pA.png" alt="포토샵 일러 아이콘">
+                                </div>
                             </a>
                         </div>
-                        <div class="img7">
+                        <div class="img7 item">
                             <a href="#">
                                 <img src="img/info_banner.jpg" alt="배송 일정 안내">
+                                <div class="icon2">
+                                    <img src="img/pA.png" alt="포토샵 일러 아이콘">
+                                </div>
                             </a>
                         </div>
-                        <div class="img8">
+                        <div class="img8 item">
                             <a href="#">
                                 <img src="img/detail_page_thumbnail.jpg" alt="상세 페이지">
+                                <div class="icon2">
+                                    <img src="img/pA.png" alt="포토샵 일러 아이콘">
+                                </div>
                             </a>
                         </div>
-                    </div>
                 </section>
             </div>
             <!-- //main -->
