--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                                     <h3>커피니 리뉴얼 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
-                                    <a class="site" href="https://ksysky.github.io/portfolio/coffeenie/index.html" target="_blank">사이트
+                                    <a class="site" href="https://ksysky.github.io/portfolio/coffeenie/index.html"
+                                        target="_blank">사이트
                                         보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
@@ -190,7 +191,8 @@
                                     <h3>에스쁘아 모작 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
-                                    <a class="site" href="https://ksysky.github.io/portfolio/espoir/index.html" target="_blank">사이트 보러가기
+                                    <a class="site" href="https://ksysky.github.io/portfolio/espoir/index.html"
+                                        target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
                                             <path id="path_4" data-name="path 4" class="blue"
@@ -221,7 +223,8 @@
                                     <h3>앤드백 리뉴얼 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
-                                    <a class="site" href="https://ksysky.github.io/portfolio/andbag/index.html" target="_blank">사이트 보러가기
+                                    <a class="site" href="https://ksysky.github.io/portfolio/andbag/index.html"
+                                        target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
                                             <path id="path_4" data-name="path 4" class="blue"
@@ -252,7 +255,7 @@
                 </div>
             </section>
             <div class="row">
-                <section id="design">
+                <section id="design" class="mb90">
                     <h2 class="title_bold">Design</h2>
                     <div class="design_box clearfix">
                         <div class="img1 item">
@@ -324,8 +327,16 @@
             <!-- //main -->
 
             <!-- footer -->
-            <footer id="contact">
-                <p>연락</p>
+            <footer id="contact" class="mb90">
+                <h2 class="title_bold">Contact</h2>
+                <form class="address_box">
+                    <input type="text" name="name" placeholder="성함을 입력해주세요">
+                    <input type="text" name="email" placeholder="메일 주소를 입력해주세요">
+                    <input type="text" name="phone" placeholder="연락처를 입력해주세요 (생략 가능)">
+                    <textarea name="message" rows="5" placeholder="내용을 입력해주세요 "></textarea>
+                    <input type="button" name="submit" class="btn blue" value="메일보내기" />
+                </form>
+                <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
             </footer>
             <!-- //footer -->
         </div>
@@ -336,6 +347,37 @@
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script src="js/custom.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+    (function () {
+        emailjs.init("user_EbHx4mOQ5jtqa1EjfP7Sx");
+    })();
+
+    $(document).ready(function () {
+        emailjs.init("user_EbHx4mOQ5jtqa1EjfP7Sx");
+        //"user_xxxxx"이 부분은 사용자마다 다르니 반드시 emailJS의 installation 화면을 확인
+        $('input[name=submit]').click(function () {
+
+            var templateParams = {
+                //각 요소는 emailJS에서 설정한 템플릿과 동일한 명으로 작성!
+                name: $('input[name=name]').val(),
+                phone: $('input[name=phone]').val(),
+                email: $('input[name=email]').val(),
+                message: $('textarea[name=message]').val()
+            };
+
+
+            emailjs.send('service_7ptqt2n', 'template_ucq9424', templateParams)
+                //emailjs.send('service ID', 'template ID', 보낼 내용이 담긴 객체)
+                .then(function (response) {
+                    console.log('SUCCESS!', response.status, response.text);
+                }, function (error) {
+                    console.log('FAILED...', error);
+                });
+        });
+
+    });
+</script>
 <!-- //script -->
 
 </html>
