--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
                     <div class="swiper-button-next"></div>
                 </div>
             </section>
-            <div class="row">
-                <section id="design" class="mb90">
+
+            <section id="design" class="mb90">
+                <div class="row">
                     <h2 class="title_bold">Design</h2>
                     <div class="design_box clearfix">
                         <div class="img1 item">
@@ -322,12 +323,12 @@
                                 </div>
                             </a>
                         </div>
-                </section>
-            </div>
+                    </div>
+            </section>
             <!-- //main -->
 
             <!-- footer -->
-            <footer id="contact" class="mb90">
+            <section id="contact" class="mb90">
                 <div class="row">
                     <h2 class="title_bold">Contact</h2>
                     <div class="mail_icon ir_pm">메일 아이콘</div>
@@ -340,7 +341,7 @@
                     </form>
                     <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
                 </div>
-            </footer>
+            </section>
             <!-- //footer -->
         </div>
     </div>
