메뉴 액티브 스크롤

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="m_menu">
             <nav>
                 <ul>
-                    <li class="active"><a href="#main" class="text">Home</a></li>
+                    <li><a href="#main" class="text">Home</a></li>
                     <li><a href="#intro" class="text">About me</a></li>
                     <li><a href="#skills" class="text">Skills</a></li>
                     <li><a href="#portfolio" class="text">Portfolio</a></li>
