페이드인 스크롤 효과

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </a>
                     </div>
                 </section>
-                <section id="intro" class="mb90">
+                <section id="intro" class="mb90 ani">
                     <h2 class="title_bold">About me</h2>
                     <div class="intro_box">
                         <div class="me">
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="skills" class="mb90">
+                <section id="skills" class="mb90 ani">
                     <h2 class="title_bold">Skills</h2>
                     <div class="skill_box">
                         <div class="box box1">
@@ -143,7 +143,7 @@
                     </div>
                 </section>
             </div>
-            <section id="portfolio" class="mb90">
+            <section id="portfolio" class="mb90 ani">
                 <h2 class="title_bold">Portfolio</h2>
                 <div class="swiper-container slider">
                     <div class="swiper-wrapper">
@@ -255,7 +255,7 @@
                 </div>
             </section>
 
-            <section id="design" class="mb90">
+            <section id="design" class="mb90 ani">
                 <div class="row">
                     <h2 class="title_bold">Design</h2>
                     <div class="design_box clearfix">
@@ -328,7 +328,7 @@
             <!-- //main -->
 
             <!-- footer -->
-            <section id="contact" class="mb90">
+            <section id="contact" class="mb90 ani">
                 <div class="row">
                     <h2 class="title_bold">Contact</h2>
                     <div class="mail_icon ir_pm">메일 아이콘</div>
