--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <h2 class="title_bold">Design</h2>
                     <div class="design_box clearfix">
                         <div class="img1 item">
-                            <a href="#">
+                            <a href="img/xbanner_mockup_safe.jpg" target="_blank">
                                 <img src="img/xbanner_mockup_safe.jpg" alt="x배너1">
                                 <div class="icon">
                                     <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
@@ -328,7 +328,7 @@
             <!-- //main -->
 
             <!-- footer -->
-            <section id="contact" class="mb90 ani">
+            <section id="contact" class="ani">
                 <div class="row">
                     <h2 class="title_bold">Contact</h2>
                     <div class="mail_icon ir_pm">메일 아이콘</div>
