디자인 갤러리

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/swiper-bundle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.3.0/css/lightgallery.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.3.0/css/lg-zoom.min.css"/>
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
     <script src="https://kit.fontawesome.com/3a49bdd301.js" crossorigin="anonymous"></script>
@@ -258,71 +260,55 @@
             <section id="design" class="mb90 ani">
                 <div class="row">
                     <h2 class="title_bold">Design</h2>
-                    <div class="design_box clearfix">
-                        <div class="img1 item">
-                            <a href="img/xbanner_mockup_safe.jpg" target="_blank">
-                                <img src="img/xbanner_mockup_safe.jpg" alt="x배너1">
-                                <div class="icon">
-                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="img2 item">
-                            <a href="#">
-                                <img src="img/xbanner_mockup_infor.jpg" alt="x배너2">
-                                <div class="icon">
-                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="img3 item">
-                            <a href="#">
-                                <img class="pin" src="img/iceCream_mockup.jpg" alt="아이스크림 목업">
-                                <div class="icon">
-                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="img4 item">
-                            <a href="#">
-                                <img class="pin" src="img/sushi_mockup.jpg" alt="초밥 목업">
-                                <div class="icon">
-                                    <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="img5 item">
-                            <a href="#">
-                                <img src="img/fan_banner.png" alt="선풍기 배너">
-                                <div class="icon">
-                                    <img src="img/photoshop_color.png" alt="포토샵 아이콘">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="img6 item">
-                            <a href="#">
-                                <img src="img/nut_banner_thumbnail.jpg" alt="nut 배너">
-                                <div class="icon2">
-                                    <img src="img/pA.png" alt="포토샵 일러 아이콘">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="img7 item">
-                            <a href="#">
-                                <img src="img/info_banner.jpg" alt="배송 일정 안내">
-                                <div class="icon2">
-                                    <img src="img/pA.png" alt="포토샵 일러 아이콘">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="img8 item">
-                            <a href="#">
-                                <img src="img/detail_page_thumbnail.jpg" alt="상세 페이지">
-                                <div class="icon2">
-                                    <img src="img/pA.png" alt="포토샵 일러 아이콘">
-                                </div>
-                            </a>
-                        </div>
+                    <div class="design_box lightgallery clearfix">
+                        <a href="img/xbanner_mockup_safe.jpg">
+                            <img class="move" src="img/xbanner_mockup_safe.jpg" alt="코로나 방역 안내 x배너">
+                            <div class="icon">
+                                <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                            </div>
+                        </a>
+                        <a href="img/xbanner_mockup_infor.jpg">
+                            <img class="move" src="img/xbanner_mockup_infor.jpg" alt="회원가입 혜택 안내 x배너">
+                            <div class="icon">
+                                <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                            </div>
+                        </a>
+                        <a href="img/iceCream_mockup.jpg">
+                            <img class="move" src="img/iceCream_mockup.jpg" alt="아이스크림 목업">
+                            <div class="icon">
+                                <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                            </div>
+                        </a>
+                        <a href="img/sushi_mockup.jpg">
+                            <img class="move" src="img/sushi_mockup.jpg" alt="초밥 목업">
+                            <div class="icon">
+                                <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
+                            </div>
+                        </a>
+                        <a href="img/fan_banner_real.png">
+                            <img class="move" src="img/fan_banner.png" alt="선풍기 모바일 배너">
+                            <div class="icon">
+                                <img src="img/photoshop_color.png" alt="포토샵 아이콘">
+                            </div>
+                        </a>
+                        <a href="img/nut_banner.jpg">
+                            <img class="move" src="img/nut_banner_thumbnail.jpg" alt="베이커리샵 상세페이지">
+                            <div class="icon2">
+                                <img src="img/pA.png" alt="포토샵 일러 아이콘">
+                            </div>
+                        </a>
+                        <a href="img/info_banner_real.jpg">
+                            <img class="move" src="img/info_banner.jpg" alt="배송 일정 안내">
+                            <div class="icon2">
+                                <img src="img/pA.png" alt="포토샵 일러 아이콘">
+                            </div>
+                        </a>
+                        <a href="img/detail_page2.jpg">
+                            <img class="move" src="img/detail_page_thumbnail.jpg" alt="공구 상세 페이지">
+                            <div class="icon2">
+                                <img src="img/pA.png" alt="포토샵 일러 아이콘">
+                            </div>
+                        </a>
                     </div>
             </section>
             <!-- //main -->
@@ -350,7 +336,8 @@
 <!-- script -->
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.3.0/lightgallery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.3.0/plugins/zoom/lg-zoom.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script>
     (function () {
@@ -382,6 +369,7 @@
 
     });
 </script>
+<script src="js/custom.js"></script>
 <!-- //script -->
 
 </html>
