목업 사진 적용

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                 <img src="img/photoshop_color.png" alt="포토샵 아이콘">
                             </div>
                         </a>
-                        <a href="img/nut_banner.jpg">
+                        <a href="img/nut_banner_mockup.png">
                             <img class="move" src="img/nut_banner_thumbnail.jpg" alt="베이커리샵 상세페이지">
                             <div class="icon2">
                                 <img src="img/pA.png" alt="포토샵 일러 아이콘">
@@ -303,7 +303,7 @@
                                 <img src="img/pA.png" alt="포토샵 일러 아이콘">
                             </div>
                         </a>
-                        <a href="img/detail_page2.jpg">
+                        <a href="img/detail_page_mockup.png">
                             <img class="move" src="img/detail_page_thumbnail.jpg" alt="공구 상세 페이지">
                             <div class="icon2">
                                 <img src="img/pA.png" alt="포토샵 일러 아이콘">
