폰트 사이즈 수정

--- a/index.html
+++ b/index.html
@@ -263,48 +263,72 @@
                     <div class="design_box lightgallery clearfix">
                         <a href="img/xbanner_mockup_safe.jpg">
                             <img class="move" src="img/xbanner_mockup_safe.jpg" alt="코로나 방역 안내 x배너">
+                            <div class="blue_back">
+                                <p>방역<br>X배너</p>
+                            </div>
                             <div class="icon">
                                 <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
                             </div>
                         </a>
                         <a href="img/xbanner_mockup_infor.jpg">
                             <img class="move" src="img/xbanner_mockup_infor.jpg" alt="회원가입 혜택 안내 x배너">
+                            <div class="blue_back">
+                                <p>혜택 안내<br>X배너</p>
+                            </div>
                             <div class="icon">
                                 <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
                             </div>
                         </a>
                         <a href="img/iceCream_mockup.jpg">
                             <img class="move" src="img/iceCream_mockup.jpg" alt="아이스크림 목업">
+                            <div class="blue_back">
+                                <p>아이스크림<br>일러스트</p>
+                            </div>
                             <div class="icon">
                                 <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
                             </div>
                         </a>
                         <a href="img/sushi_mockup.jpg">
                             <img class="move" src="img/sushi_mockup.jpg" alt="초밥 목업">
+                            <div class="blue_back">
+                                <p>초밥<br>일러스트</p>
+                            </div>
                             <div class="icon">
                                 <img src="img/illustrator_color.png" alt="일러스트레이터 아이콘">
                             </div>
                         </a>
                         <a href="img/fan_banner_real.png">
                             <img class="move" src="img/fan_banner.png" alt="선풍기 모바일 배너">
+                            <div class="blue_back">
+                                <p>선풍기<br>모바일 배너</p>
+                            </div>
                             <div class="icon">
                                 <img src="img/photoshop_color.png" alt="포토샵 아이콘">
                             </div>
                         </a>
                         <a href="img/nut_banner_mockup.png">
                             <img class="move" src="img/nut_banner_thumbnail.jpg" alt="베이커리샵 상세페이지">
+                            <div class="blue_back">
+                                <p>베이커리샵<br>상세페이지</p>
+                            </div>
                             <div class="icon2">
                                 <img src="img/pA.png" alt="포토샵 일러 아이콘">
                             </div>
                         </a>
                         <a href="img/info_banner_real.jpg">
                             <img class="move" src="img/info_banner.jpg" alt="배송 일정 안내">
+                            <div class="blue_back">
+                                <p>배송 일정<br>안내</p>
+                            </div>
                             <div class="icon2">
                                 <img src="img/pA.png" alt="포토샵 일러 아이콘">
                             </div>
                         </a>
                         <a href="img/detail_page_mockup.png">
                             <img class="move" src="img/detail_page_thumbnail.jpg" alt="공구 상세 페이지">
+                            <div class="blue_back">
+                                <p>공구<br>상세페이지</p>
+                            </div>
                             <div class="icon2">
                                 <img src="img/pA.png" alt="포토샵 일러 아이콘">
                             </div>
