--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
                                     </a>
-                                    <a class="work" href="#">작업 내용
+                                    <a class="work" href="web_portfolio/sub1/index.html">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
                                             <path id="path_4" data-name="path 4" class="blue"
