서브 페이지 구조

--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,41 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <p>Responsive Web</p>
+            <h1>커피니 리뉴얼 사이트</h1>
+            <a href="#">사이트 바로가기</a>
+        </div>
+    </header>
+    <section>
+        <div class="container">
+            <p>목업 사진</p>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <p>사이트 설명</p>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <p>디자인 시안</p>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>푸터</p>
+            <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
+        </div>
+    </footer>
 </body>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/custom.js"></script>
+
 </html>
