--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <div class="slide_text">
                                 <div class="slide_tit">
                                     <p>Responsive Web</p>
-                                    <h3>에스쁘아 모작 사이트</h3>
+                                    <h3>에스쁘아 클론 코딩 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
                                     <a class="site" href="https://ksysky.github.io/portfolio/web_portfolio/espoir/index.html"
