--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -52,9 +52,9 @@
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt>프로젝트 소개</dt>
-                <dd class="intro">제가 처음으로 만든 리뉴얼 웹사이트입니다.
+                <dd class="intro">제가 처음으로 만든 리뉴얼 웹사이트입니다.<br>
                     기존의 사이트는 전체적으로 폰트가 너무 작았으며 배너에만 시선이 집중되어서 다른 메뉴들은 잘 눈에 띄지 않았습니다. 이를 보완하기 위해 잘 보여야될 메뉴 레이아웃을 위에서부터
-                    순서대로 배치했습니다. 그리고 slick 슬라이드와 css animation을 활용해서 다른 메뉴들에도 시선이 가도록 효과를 주었습니다. 카페 시즌 음료들의 컨셉에 맞게 배너를
+                    순서대로 배치했습니다. 그리고 slick 슬라이드와 css animation을 활용해서 다른 메뉴들에도 시선이 가도록 효과를 주었습니다. 코딩 효과 뿐만 아니라 카페 시즌 음료들의 컨셉에 맞게 배너를
                     리디자인을 해서 신제품에도 눈이 가도록 노력했습니다.</dd>
 
                 <dt>주요 컬러</dt>
