--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -70,7 +70,9 @@
 
                 <dt>디자인 시안</dt>
                 <dd class="template">
-                    <img src="img/coffeenie_sub.png" alt="커피니 웹디자인 시안">
+                    <a href="img/coffeenie_sub.png" target="_blank">
+                        <img src="img/coffeenie_sub.png" alt="커피니 웹디자인 시안">
+                    </a>
                 </dd>
             </dl>
         </div>
