--- a/index.html
+++ b/index.html
@@ -247,6 +247,39 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="swiper-slide">
+                            <div class="mockup_img">
+                                <img src="img/coffeenie_mockup.png" alt="커피니 목업">
+                            </div>
+                            <div class="slide_text">
+                                <div class="slide_tit">
+                                    <p>Responsive Web</p>
+                                    <h3>김수연 포트폴리오 사이트</h3>
+                                </div>
+                                <div class="slide_btn">
+                                    <a class="site" href="https://ksysky.github.io/portfolio/web_portfolio/coffeenie/index.html"
+                                        target="_blank">사이트
+                                        보러가기
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
+                                    <a class="work" href="web_portfolio/sub1/index.html" target="_blank">작업 내용
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
+                                            viewBox="0 0 13 4.191">
+                                            <path id="path_4" data-name="path 4" class="blue"
+                                                d="M875.443,2491.8h12l-4.659-3"
+                                                transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- If we need pagination -->
                     <div class="swiper-pagination"></div>
