다크모드 없앰

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     <li><a href="#contact" class="text">Contact</a></li>
                 </ul>
             </nav>
-            <div class="mode_switch pc_switch">
+            <!-- <div class="mode_switch pc_switch">
                 <span class="mode_tit">Dark Mode</span>
                 <label class="dark_mode">
                     <input type="checkbox">
                     <span class="onoff_switch"></span>
                 </label>
-            </div>
+            </div> -->
             <div class="mBtn">
                 <a href="#" class="ir_pm">모바일 버튼<span></span><span></span><span></span></a>
             </div>
@@ -58,13 +58,13 @@
                     <li><a href="#contact" class="text">Contact</a></li>
                 </ul>
             </nav>
-            <div class="mode_switch">
+            <!-- <div class="mode_switch">
                 <span class="mode_tit">Dark Mode</span>
                 <label class="dark_mode">
                     <input type="checkbox">
                     <span class="onoff_switch"></span>
                 </label>
-            </div>
+            </div> -->
         </div>
         <div class="m_back"></div>
     </aside>
