--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <div class="tit">
                 <p>Responsive Web</p>
@@ -70,7 +70,9 @@
 
                 <dt>디자인 시안</dt>
                 <dd class="template">
-                    <img src="img/coffeenie_sub.png" alt="커피니 웹디자인 시안">
+                    <a href="img/coffeenie_sub.png" target="_blank">
+                        <img src="img/coffeenie_sub.png" alt="커피니 웹디자인 시안">
+                    </a>
                 </dd>
             </dl>
         </div>
@@ -80,6 +82,13 @@
             <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
         </div>
     </footer>
+    <div class="top_btn">
+        <a href="#header">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
+                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705" transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+            </svg>              
+        </a>
+    </div>
 </body>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/custom.js"></script>
