--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>커피니 작업 내용</title>
+    <title>앤드백 작업 내용</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -18,10 +18,10 @@
         <div class="container">
             <div class="tit">
                 <p>Responsive Web</p>
-                <h1>커피니 리뉴얼 사이트</h1>
+                <h1>앤드백 리뉴얼 사이트</h1>
             </div>
             <div class="btn">
-                <a href="../coffeenie/index.html">
+                <a href="../andbag/index.html">
                     사이트 바로가기
                     <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191" viewBox="0 0 13 4.191">
                         <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
@@ -35,7 +35,7 @@
     <section class="main_img">
         <div class="container">
             <div class="mockup">
-                <img src="img/coffeenie_mockup.png" alt="커피니 웹 목업 이미지">
+                <img src="img/andbag_mockup.png" alt="앤드백 웹 목업 이미지">
             </div>
         </div>
     </section>
@@ -51,11 +51,8 @@
                 <dt>사용 프로그램</dt>
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
-                <dt>프로젝트 소개</dt>
-                <dd class="intro">제가 처음으로 만든 리뉴얼 웹사이트입니다.<br>
-                    기존의 사이트는 전체적으로 폰트가 너무 작았으며 배너에만 시선이 집중되어서 다른 메뉴들은 잘 눈에 띄지 않았습니다. 이를 보완하기 위해 잘 보여야될 메뉴 레이아웃을 위에서부터
-                    순서대로 배치했습니다. 그리고 slick 슬라이드와 css animation을 활용해서 다른 메뉴들에도 시선이 가도록 효과를 주었습니다. 코딩 효과 뿐만 아니라 카페 시즌 음료들의 컨셉에 맞게 배너를
-                    리디자인을 해서 신제품에도 눈이 가도록 노력했습니다.</dd>
+                <dt class="intro_tit">프로젝트 소개</dt>
+                <dd class="intro">앤드백 리뉴얼 디자인 생각중</dd>
 
                 <dt>주요 컬러</dt>
                 <dd>
@@ -64,14 +61,15 @@
                 </dd>
 
                 <dt>사용 폰트</dt>
-                <dd class="font font_e">Pretendard 프리텐다드 ExtraLight</dd>
+                <dd class="font font_r">Pretendard 프리텐다드 Regular</dd>
                 <dd class="font font_m">Pretendard 프리텐다드 Medium</dd>
-                <dd class="font font_s">Pretendard 프리텐다드 SemiBold</dd>
+                <dd class="font font_b">Pretendard 프리텐다드 Bold</dd>
+                <dd class="font font_e">Pretendard 프리텐다드 ExtraBold</dd>
 
                 <dt>디자인 시안</dt>
                 <dd class="template">
-                    <a href="img/coffeenie_sub.png" target="_blank">
-                        <img src="img/coffeenie_sub.png" alt="커피니 웹디자인 시안">
+                    <a href="img/andbag_sub.png" target="_blank">
+                        <img src="img/andbag_sub.png" alt="커피니 웹디자인 시안">
                     </a>
                 </dd>
             </dl>
