메인 배경 수정

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </div>
                             <div class="back1"></div>
                             <div class="back2"></div>
-                            <p class="hashtag">#신입#꼼꼼함#계속공부중#일본어가능</p>
+                            <p class="hashtag">#신입#신중함#집념#긍정적에너지#계속공부중#일본어가능</p>
                         </div>
                         <div class="intro_text">
                             <p><b>이름</b><span>김수연</span></p>
@@ -190,7 +190,7 @@
                             <div class="slide_text">
                                 <div class="slide_tit">
                                     <p>Responsive Web</p>
-                                    <h3>에스쁘아 클론 코딩 사이트</h3>
+                                    <h3>에스쁘아 모작 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
                                     <a class="site" href="https://ksysky.github.io/portfolio/web_portfolio/espoir/index.html"
