줄바꿈 수정

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </div>
                             <div class="back1"></div>
                             <div class="back2"></div>
-                            <p class="hashtag">#신입#신중함#집념#긍정적에너지#계속공부중#일본어가능</p>
+                            <p class="hashtag">#신입#신중함#집념#긍정적에너지<br>#계속공부중#일본어가능</p>
                         </div>
                         <div class="intro_text">
                             <p><b>이름</b><span>김수연</span></p>
