포트폴리오 이미지 추가

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="mockup_img">
-                                <img src="img/coffeenie_mockup.png" alt="커피니 목업">
+                                <img src="img/portfolio_mockup.png" alt="포트폴리오 목업">
                             </div>
                             <div class="slide_text">
                                 <div class="slide_tit">
