포트폴리오 sub 이미지 수정

--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -21,7 +21,7 @@
                 <h1>커피니 리뉴얼 사이트</h1>
             </div>
             <div class="btn">
-                <a href="../coffeenie/index.html">
+                <a href="https://ksysky.github.io/portfolio/">
                     사이트 바로가기
                     <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191" viewBox="0 0 13 4.191">
                         <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
@@ -35,7 +35,7 @@
     <section class="main_img">
         <div class="container">
             <div class="mockup">
-                <img src="img/coffeenie_mockup.png" alt="커피니 웹 목업 이미지">
+                <img src="img/portfolio_mockup.png" alt="포트폴리오 웹 목업 이미지">
             </div>
         </div>
     </section>
@@ -52,10 +52,7 @@
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt>프로젝트 소개</dt>
-                <dd class="intro">제가 처음으로 만든 리뉴얼 웹사이트입니다.<br>
-                    기존의 사이트는 전체적으로 폰트가 너무 작았으며 배너에만 시선이 집중되어서 다른 메뉴들은 잘 눈에 띄지 않았습니다. 이를 보완하기 위해 잘 보여야될 메뉴 레이아웃을 위에서부터
-                    순서대로 배치했습니다. 그리고 slick 슬라이드와 css animation을 활용해서 다른 메뉴들에도 시선이 가도록 효과를 주었습니다. 코딩 효과 뿐만 아니라 카페 시즌 음료들의 컨셉에 맞게 배너를
-                    리디자인을 해서 신제품에도 눈이 가도록 노력했습니다.</dd>
+                <dd class="intro">포트폴리오 웹사이트 설명 생각중</dd>
 
                 <dt>주요 컬러</dt>
                 <dd>
@@ -70,8 +67,8 @@
 
                 <dt>디자인 시안</dt>
                 <dd class="template">
-                    <a href="img/coffeenie_sub.png" target="_blank">
-                        <img src="img/coffeenie_sub.png" alt="커피니 웹디자인 시안">
+                    <a href="img/portfolio_sub.png" target="_blank">
+                        <img src="img/portfolio_sub.png" alt="포트폴리오 웹디자인 시안">
                     </a>
                 </dd>
             </dl>
