에스쁘아 소개 수정

--- a/web_portfolio/sub2/index.html
+++ b/web_portfolio/sub2/index.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
         <div class="container">
             <div class="tit">
                 <p>Responsive Web</p>
-                <h1>에스쁘아 사이트</h1>
+                <h1>에스쁘아 모작 사이트</h1>
             </div>
             <div class="btn">
                 <a href="../espoir/index.html">
@@ -54,7 +56,9 @@
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt class="intro_tit">프로젝트 소개</dt>
-                <dd class="intro">에스쁘아 사이트 생각 중</dd>
+                <dd class="intro">에스쁘아 사이트를 모작한 반응형 사이트입니다.<br>디자인은 똑같이 했지만 구조는 제가 스스로 퍼블리싱했으며 배너 디자인도 100% 스스로 디자인했습니다.
+                    웹표준을 준수하면서 퍼블리싱을 했으며 배너 디자인은 제품 각각의 이미지를 신경써가면서 디자인 하도록 노력했습니다.<br>작업하면서 특히 신경쓴 부분은 검색창을 눌렀을 때 옵션창이
+                    나오는 부분과 REAL REVIEW에 자세히보기를 눌렀을 때 나오는 리뷰의 모달창에 특히 신경을 써서 작업했습니다.</dd>
 
                 <dt>주요 컬러</dt>
                 <dd>
@@ -85,8 +89,10 @@
     <div class="top_btn">
         <a href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
-                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705" transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-            </svg>              
+                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705"
+                    transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round"
+                    stroke-linejoin="round" stroke-width="2" />
+            </svg>
         </a>
     </div>
 </body>
