--- a/web_portfolio/sub2/index.html
+++ b/web_portfolio/sub2/index.html
@@ -25,7 +25,7 @@
                 <h1>에스쁘아 모작 사이트</h1>
             </div>
             <div class="btn">
-                <a href="../espoir/index.html">
+                <a href="https://ksysky.github.io/portfolio/web_portfolio/espoir/index.html">
                     사이트 바로가기
                     <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191" viewBox="0 0 13 4.191">
                         <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
