앤드백 소개 수정

--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -21,7 +21,7 @@
                 <h1>앤드백 리뉴얼 사이트</h1>
             </div>
             <div class="btn">
-                <a href="../andbag/index.html">
+                <a href="https://ksysky.github.io/portfolio/web_portfolio/andbag/index.html">
                     사이트 바로가기
                     <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191" viewBox="0 0 13 4.191">
                         <path id="path_4" data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
@@ -46,13 +46,16 @@
                 <dd>반응형 사이트</dd>
 
                 <dt>기여도</dt>
-                <dd>디자인 100% + 퍼블리싱 100%</dd>
+                <dd>디자인 80% + 퍼블리싱 100%</dd>
 
                 <dt>사용 프로그램</dt>
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt class="intro_tit">프로젝트 소개</dt>
-                <dd class="intro">앤드백 리뉴얼 디자인 생각중</dd>
+                <dd class="intro">기존 사이트는 반응형 사이트가 아니었고 상품 슬라이드가 너무 많아 스크롤을 많이 내려야되는 단점이 있었습니다.<br>
+                    그래서 반응형으로 퍼블리싱을 하였으며 신상품과 베스트의 슬라이드를 같은 곳에서 바로 볼 수 있도록 탭메뉴를 배치해서 쉽게 볼 수 있도록 했습니다.<br>
+                    또 이미지와 슬라이드가 반복되는 지루함을 탈피하기 위해서 컨텐츠 배너 부분에는 스크롤하면 텍스트와 이미지에 애니메이션을 사용해서 지루함을 없애도록 했습니다.
+                </dd>
 
                 <dt>주요 컬러</dt>
                 <dd>
@@ -83,8 +86,10 @@
     <div class="top_btn">
         <a href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
-                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705" transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-            </svg>              
+                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705"
+                    transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round"
+                    stroke-linejoin="round" stroke-width="2" />
+            </svg>
         </a>
     </div>
 </body>
