서브 포트폴리오 페이지 폰트 바꿈

--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>커피니 작업 내용</title>
+    <title>김수연 포트폴리오 사이트 작업 내용</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="tit">
                 <p>Responsive Web</p>
-                <h1>커피니 리뉴얼 사이트</h1>
+                <h1>김수연 포트폴리오 사이트</h1>
             </div>
             <div class="btn">
                 <a href="https://ksysky.github.io/portfolio/">
@@ -58,12 +58,13 @@
                 <dd>
                     <div class="c_chart c1"></div>
                     <div class="c_chart c2"></div>
+                    <div class="c_chart c3"></div>
                 </dd>
 
                 <dt>사용 폰트</dt>
-                <dd class="font font_e">Pretendard 프리텐다드 ExtraLight</dd>
                 <dd class="font font_m">Pretendard 프리텐다드 Medium</dd>
-                <dd class="font font_s">Pretendard 프리텐다드 SemiBold</dd>
+                <dd class="font font_b">Pretendard 프리텐다드 Bold</dd>
+                <dd class="font font_bb">Pretendard 프리텐다드 Black</dd>
 
                 <dt>디자인 시안</dt>
                 <dd class="template">
