--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김수연 포트폴리오 사이트 작업 내용</title>
 
+    <!-- style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
+    <!-- //style -->
 </head>
 
 <body>
